--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <div class="container">
                 <h1>Acesso ao Sistema</h1>
-
+                <p id="p-mensagem">**VERSÃO SEM SENHA / CLIQUE EM "ENTRAR"**</p>
                 <form action="">
                     <div class="row">
                         <div class="input-field col s12">
@@ -48,7 +48,7 @@
                     <div class="row">
                         <div class="col s12">
                             <button id="button-login" class="waves-effect waves-light btn" type="button">
-                <i class="material-icons left">check_circle</i>Entrar</button>
+                            <i class="material-icons left">check_circle</i>Entrar</button>
                         </div>
                     </div>
                 </form>
@@ -63,6 +63,7 @@
 
     <script src="assets/libraries/jquery-v3.4.1/jquery-3.4.1.js"></script>
     <script src="assets/libraries/materialize-v1.0.0/js/materialize.min.js"></script>
+    <script src="assets/resources/scripts/index.js"></script>
 </body>
 
 </html>
