--- a/pages/atualizar-dados-cliente.html
+++ b/pages/atualizar-dados-cliente.html
@@ -17,7 +17,7 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo">
+                    <a href="#" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
                     <a href="#" data-target="barra-mobile" class="sidenav-trigger">
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" class="modal-trigger">
+                            <a href="../index.html">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -59,22 +59,26 @@
                 <h1>Atualizar Dados do Cliente</h1>
                 <form action="">
                     <div class="row">
-                        <div class="input-field col s12">
+                        <div class="input-field col s12 m7">
                             <i class="material-icons prefix">person</i>
-                            <input id="input-cpf" class="cpf" type="text" class="cep" placeholder="000.000.000-00">
+                            <input id="input-cpf" class="cpf" type="text" class="cep" value="213.123.321-89" placeholder="000.000.000-00">
                             <label for="icon_prefix">CPF</label>
                         </div>
+                        <div class="col s12 m5">
+                            <button class="waves-effect waves-light btn button-pesquisar" type="submit">
+                            <i class="material-icons left">search</i>Pesquisar</button>
+                        </div>
                     </div>
-                    <div id="div-dados-pessoa" class="ocultar-conteudo">
+                    <div id="div-dados-pessoa">
                         <div class="row">
                             <div class="input-field col s12 m12 l6">
                                 <i class="material-icons prefix">person</i>
-                                <input type="text" placeholder="Darth">
+                                <input type="text" value="Darth" placeholder="Darth">
                                 <label for="icon_prefix">Primeiro Nome</label>
                             </div>
                             <div class="input-field col s12 m12 l6">
                                 <i class="material-icons prefix">person</i>
-                                <input type="text" placeholder="Vaider">
+                                <input type="text" value="Vaider" placeholder="Vaider">
                                 <label for="icon_prefix">Sobrenome</label>
                             </div>
                         </div>
@@ -82,12 +86,12 @@
                         <div class="row">
                             <div id="div-celular" class="input-field col s12 m6">
                                 <i class="material-icons prefix">phone_iphone</i>
-                                <input class="celular" type="text" placeholder="(00)00000-0000">
+                                <input class="celular" type="text" value="(42)999994545" placeholder="(00)00000-0000">
                                 <label for="icon_prefix">Celular</label>
                             </div>
                             <div class="input-field col s12 m6">
                                 <i class="material-icons prefix">mail</i>
-                                <input type="email" placeholder="darthvaider@estreladamorte.com">
+                                <input type="email" value="darthvaider@estreladamorte.com" placeholder="darthvaider@estreladamorte.com">
                                 <label for="icon_prefix">E-mail</label>
                             </div>
                         </div>
@@ -95,13 +99,13 @@
                         <div class="row">
                             <div class="input-field col s12 m12 l6">
                                 <i class="material-icons prefix">location_on</i>
-                                <input id="input-cep" class="cep" type="text" placeholder="85070700">
+                                <input id="input-cep" class="cep" type="text" value="85070700" placeholder="85070700">
                                 <label for="icon_prefix">CEP</label>
                             </div>
 
                             <div class="input-field col s12 m12 l6">
                                 <i class="material-icons prefix">markunread_mailbox</i>
-                                <input id="input-numero" type="number" placeholder="1024">
+                                <input id="input-numero" type="number" value="3072" placeholder="1024">
                                 <label for="icon_prefix">Número</label>
                             </div>
                         </div>
@@ -109,23 +113,14 @@
                         <div class="row">
                             <div class="col s12 m12 l6">
                                 <button id="button-cadastro" class="waves-effect waves-light btn" type="submit">
-                  <i class="material-icons left">check_circle</i>Cadastrar</button>
+                                    <i class="material-icons left">check_circle</i>Confirmar mudanças</button>
                             </div>
                             <div class="col s12 m12 l6">
                                 <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="button">
-                  <i class="material-icons left">cancel</i>Cancelar</button>
+                                    <i class="material-icons left">cancel</i>Cancelar</button>
                             </div>
                         </div>
-
                     </div>
-
-                    <div class="row">
-                        <div class="col s12">
-                            <button id="button-pesquisar-cliente" class="waves-effect waves-light btn" type="submit">
-                <i class="material-icons left">check_circle</i>Pesquisar</button>
-                        </div>
-                    </div>
-
                 </form>
             </div>
         </section>
@@ -134,34 +129,34 @@
     <div id="modal-menu-servicos" class="modal">
         <div class="modal-content">
             <h4>Serviços</h4>
-            <div class="row">
-                <div class="col s6 m2">
+            <div class="row ">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
-                        <img id="img-locacao" src="assets/resources/img/cliente.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
-                        <img id="img-locacao" src="assets/resources/img/usuario.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
-                        <img id="img-locacao" src="assets/resources/img/veiculo.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-relatorio" class="modal-trigger">
-                        <img id="img-locacao" src="assets/resources/img/relatorio.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
                 </div>
@@ -177,14 +172,14 @@
             <h4>Gerenciar locações</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                    <a href="veiculos-disponiveis.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Veículos disponíveis</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="devolucao.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/devolucao.png">
                         <p>Devoluções</p>
                     </a>
                 </div>
@@ -200,14 +195,14 @@
             <h4>Gerenciar Clientes</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                    <a href="cadastro-cliente.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Cliente</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-cliente.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
@@ -222,15 +217,15 @@
         <div class="modal-content">
             <h4>Gerenciar Usuário</h4>
             <div class="row">
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                <div class="col s6 m2 ">
+                    <a href="cadastro-usuario.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-usuario.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
@@ -246,26 +241,26 @@
             <h4>Gerenciar Frota</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                    <a href="cadastro-veiculo.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Adicionar Novo Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-veiculo.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Alterar Dados do Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="enviar-veiculo-oficina.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href="retornar-veiculo-oficina.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
                 </div>
@@ -280,22 +275,22 @@
     <div id="modal-gerenciar-relatorio" class="modal">
         <div class="modal-content">
             <h4>Gerenciar Clientes</h4>
-            <div class="row">
+            <div class="row ">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/locacao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio-lucros.png">
                         <p>Relatório de Lucros</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Relatório de Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Relatório de Reparos</p>
                     </a>
                 </div>
