--- a/pages/cadastro-usuario.html
+++ b/pages/cadastro-usuario.html
@@ -17,7 +17,7 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo">
+                    <a href="#" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
                     <a href="#" data-target="barra-mobile" class="sidenav-trigger">
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" class="modal-trigger">
+                            <a href="../index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" class="modal-trigger">
+                            <a href="../index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -188,34 +188,34 @@
     <div id="modal-menu-servicos" class="modal">
         <div class="modal-content">
             <h4>Serviços</h4>
-            <div class="row">
-                <div class="col s6 m2">
+            <div class="row ">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
                     </a>
                 </div>
-                <div class="col s6 m2">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-cliente" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/cliente.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/cliente.png">
                         <p>Gerenciar Clientes</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-usuario" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/usuario.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/usuario.png">
                         <p>Gerenciar Usuários</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-frota" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/veiculo.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/veiculo.png">
                         <p>Gerenciar Frota</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
                     <a href="#modal-gerenciar-relatorio" class="modal-trigger">
-                        <img id="img-locacao" src="../assets/resources/img/relatorio.png">
+                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio.png">
                         <p>Relátorios</p>
                     </a>
                 </div>
@@ -231,14 +231,14 @@
             <h4>Gerenciar locações</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                    <a href="veiculos-disponiveis.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Veículos disponíveis</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href="devolucao.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/devolucao.png">
                         <p>Devoluções</p>
                     </a>
                 </div>
@@ -254,14 +254,14 @@
             <h4>Gerenciar Clientes</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                    <a href="cadastro-cliente.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Cliente</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-cliente.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Cliente</p>
                     </a>
                 </div>
@@ -276,15 +276,15 @@
         <div class="modal-content">
             <h4>Gerenciar Usuário</h4>
             <div class="row">
-                <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                <div class="col s6 m2 ">
+                    <a href="cadastro-usuario.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/adicionar.png">
                         <p>Adicionar Usuário</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-usuario.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Atualizar Dados do Usuário</p>
                     </a>
                 </div>
@@ -300,26 +300,26 @@
             <h4>Gerenciar Frota</h4>
             <div class="row">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                    <a href="cadastro-veiculo.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Adicionar Novo Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href="atualizar-dados-veiculo.html">
+                        <img id="img-locacao" src="../assets/resources/img/menu/atualizar-dados.png">
                         <p>Alterar Dados do Veículo</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Enviar Veículo para oficina</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/retornar-oficina.png">
                         <p>Retornar Veículo da Oficina</p>
                     </a>
                 </div>
@@ -334,22 +334,22 @@
     <div id="modal-gerenciar-relatorio" class="modal">
         <div class="modal-content">
             <h4>Gerenciar Clientes</h4>
-            <div class="row">
+            <div class="row ">
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/locacao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/relatorio-lucros.png">
                         <p>Relatório de Lucros</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Relatório de Locações</p>
                     </a>
                 </div>
                 <div class="col s6 m2">
-                    <a href="">
-                        <img id="img-locacao" src="../assets/resources/img/devolucao.png">
+                    <a href=" ">
+                        <img id="img-locacao" src="../assets/resources/img/menu/enviar-oficina.png">
                         <p>Relatório de Reparos</p>
                     </a>
                 </div>
