--- a/pages/enviar-veiculo-oficina.html
+++ b/pages/enviar-veiculo-oficina.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../assets/libraries/materialize-v1.0.0/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="../assets/resources/styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Atualizar dados Veículo</title>
+    <title>Enviar veículo para oficina</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav class="cor-principal">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo">
+                    <a href="#" class="brand-logo">
                         <i class="material-icons left">directions_car</i>RentACar
                     </a>
                     <a href="#" data-target="barra-mobile" class="sidenav-trigger">
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" class="modal-trigger">
+                            <a href="../index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" class="modal-trigger">
+                            <a href="../index.html" class="modal-trigger">
                                 <i class="material-icons left">power_settings_new</i>Encerar Sessão
                             </a>
                         </li>
@@ -56,82 +56,44 @@
     <main>
         <section>
             <div class="container">
-                <h1>Atualizar dados do Veículo</h1>
+                <h1>Enviar veículo para oficina</h1>
                 <form action="">
                     <div class="row">
-                        <div class="input-field col s12 m6">
+                        <div class="input-field col s12 m7">
                             <i class="material-icons prefix">directions_car</i>
                             <input id="input-chassi" type="text" value="2275ca7689jj2019" placeholder="1234cb4321dd34yp9">
                             <label for="icon_prefix">Número do Chassi</label>
                         </div>
-                        <div class="col s12 m6">
-                            <button class="waves-effect waves-light btn button-pesquisar" type="submit">
-                    <i class="material-icons left">check_circle</i>Pesquisar</button>
+                        <div class="col s12 m5">
+                            <button id="button-pesquisar-veiculo" class="waves-effect waves-light btn button-pesquisar" type="submit">
+                            <i class="material-icons left">search</i>Pesquisar</button>
                         </div>
                     </div>
-                    <div id="div-dados-veiculo">
-                        <div class="row">
-                            <div class="input-field col s12 m12 l6">
-                                <i class="material-icons prefix">build</i>
-                                <input type="text" value="Fiat" placeholder="Fiat">
-                                <label for="icon_prefix">Montadora</label>
-                            </div>
-                            <div class="input-field col s12 m12 l6">
-                                <i class="material-icons prefix">directions_car</i>
-                                <input type="text" value="Argo" placeholder="Argo">
-                                <label for="icon_prefix">Modelo</label>
-                            </div>
+                    <div class="row">
+                        <h4>Dados do Veículo</h4>
+                        <div class="col s12">
+                            <p><span>Montadora: </span>Fiat</p>
+                            <p><span>Modelo: </span>Argo</p>
+                            <p><span>Número do Chassi: </span>2275ca7689jj2019</p>
+                            <p><span>Descrição do veículo: </span> Cinza, 1.4, 4 portas e ar condicionado</p>
                         </div>
-
-                        <div class="row">
-                            <div class="input-field col s12 m6">
-                                <i class="material-icons prefix">filter_list</i>
-                                <select>
-                                    <option value="1">Hatch</option>
-                                    <option value="2">Sedãn</option>
-                                    <option value="3">SUV</option>
-                                    <option value="4">Pick-Ups</option>
-                                </select>
-                                <label>Categoria</label>
-                            </div>
-                            <div class="input-field col s12 m6">
-                                <i class="material-icons prefix">monetization_on</i>
-                                <input type="text" value="R$95.00" placeholder="95,00">
-                                <label for="icon_prefix">Preço Diária</label>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <i class="material-icons prefix">description</i>
-                                    <textarea class="materialize-textarea" placeholder="Veículo 4x4 - OFF Road">Motor 1.4, 4 portas e ar condicionado
-                                    </textarea>
-                                    <label for="icon_prefix">Descrição</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div id="div-imagens-veiculo" class="input-field col s12">
-                                    <h3>Adicionar ou Alterar Imagem</h3>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col s12 m12">
-                                    <input id="input-imagem" type="file" accept="image/*">
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col s12 m12 l6">
-                                    <button id="button-cadastro" class="waves-effect waves-light btn" type="submit">
-                    <i class="material-icons left">check_circle</i>Confirmar Alterações</button>
-                                </div>
-                                <div class="col s12 m12 l6">
-                                    <button id="button-cancelar-cadastro" class="waves-effect waves-light btn" type="submit">
-                    <i class="material-icons left">cancel</i>Cancelar</button>
-                                </div>
-
-                            </div>
+                    </div>
+                    <div class="row">
+                        <h4>Descrição do problema</h4>
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">description</i>
+                            <textarea class="materialize-textarea" placeholder="Não da partida corretamente"></textarea>
+                            <label for="icon_prefix">Descrição</label>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <button id="button-enviar-oficina" class="waves-effect waves-light btn" type="submit">
+                                <i class="material-icons left">build</i>Enviar para Oficina</button>
+                        </div>
+                    </div>
                 </form>
-                </div>
+            </div>
         </section>
     </main>
 
@@ -139,7 +101,7 @@
         <div class="modal-content">
             <h4>Serviços</h4>
             <div class="row ">
-                <div class="col s6 m2">
+                <div class="col s6 m2 ">
                     <a href="#modal-gerenciar-locacao" class="modal-trigger">
                         <img id="img-locacao" src="../assets/resources/img/menu/locacao.png">
                         <p>Gerenciar Locações</p>
@@ -320,7 +282,6 @@
     <script src="../assets/libraries/materialize-v1.0.0/js/materialize.min.js"></script>
     <script src="../assets/libraries/jQuery-Mask-Plugin-master/dist/jquery.mask.min.js"></script>
     <script src="../assets/resources/scripts/inicializacao-bibliotecas.js"></script>
-    <script src="../assets/resources/scripts/atualizar-dados-veiculo.js"></script>
 
 </body>
 
